// Vitest Snapshot v1

exports[`(components) button > (disable) take snapshot 1`] = `
<div>
  <button
    class="_enshita-button-box_1gcpx_17 undefined"
    disabled=""
    tabindex="0"
    type="button"
  >
    <p
      class="_enshita-button-text_1gcpx_36 undefined"
    >
      This is test
    </p>
  </button>
</div>
`;

exports[`(components) button > (icon) take snapshot 1`] = `
<div>
  <button
    class="_enshita-button-box_1gcpx_17 undefined"
    tabindex="0"
    type="button"
  >
    <div
      class="_enshita-button-icon-box_1gcpx_1 undefined"
    >
      <span />
    </div>
    <p
      class="_enshita-button-text_1gcpx_36 undefined"
    >
      This is test
    </p>
  </button>
</div>
`;

exports[`(components) button > (normal) take snapshot 1`] = `
<div>
  <button
    class="_enshita-button-box_1gcpx_17 undefined"
    tabindex="0"
    type="button"
  >
    <p
      class="_enshita-button-text_1gcpx_36 undefined"
    >
      This is test
    </p>
  </button>
</div>
`;
